#33 Создан менеджер форм программ по вариантам